doc corba workaround